fixing page-hero mobile spacing'

--- a/src/styles/PageHero.scss
+++ b/src/styles/PageHero.scss
@@ -31,7 +31,7 @@
         transform: translateX(-50%);
 
         @media(max-width: $tablet){
-            width: calc(100% - 50px);
+            width: calc(100%);
         }
     }
 }
